--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1880,7 +1880,7 @@ a {
 }
 .cid-sBaTOOlhZG .dropdown-menu,
 .cid-sBaTOOlhZG .navbar.opened {
-  background: #ffffff !important;
+  background: #cefffe !important;
 }
 .cid-sBaTOOlhZG .nav-item:focus,
 .cid-sBaTOOlhZG .nav-link:focus {
@@ -1915,7 +1915,7 @@ a {
   transition: all 0.3s;
   border-bottom: 1px solid transparent;
   box-shadow: 0 1px 3px 0 rgba(0, 0, 0, 0.1);
-  background: #ffffff;
+  background: #cefffe;
 }
 .cid-sBaTOOlhZG .navbar.opened {
   transition: all 0.3s;
@@ -2060,7 +2060,7 @@ a {
   padding: 0.667em 1.667em;
 }
 .cid-sBaTOOlhZG .navbar.navbar-expand-lg .dropdown .dropdown-menu {
-  background: #ffffff;
+  background: #cefffe;
 }
 .cid-sBaTOOlhZG .navbar.navbar-expand-lg .dropdown .dropdown-menu .dropdown-submenu {
   margin: 0;
@@ -2162,78 +2162,125 @@ a {
     left: -1rem;
   }
 }
-.cid-sBb75zQkD0 {
+.cid-sBBXfUyw8t {
   padding-top: 6rem;
   padding-bottom: 6rem;
-  background-color: #9fdbf8;
+  background-color: #ffffff;
 }
-.cid-sBb75zQkD0 .content-wrapper {
-  background: #fafafa;
+.cid-sBBXfUyw8t .content-wrapper {
+  background: #fde1e1;
 }
 @media (max-width: 991px) {
-  .cid-sBb75zQkD0 .content-wrapper .row {
+  .cid-sBBXfUyw8t .content-wrapper .row {
     flex-direction: column-reverse;
   }
-  .cid-sBb75zQkD0 .content-wrapper .image-wrapper {
+  .cid-sBBXfUyw8t .content-wrapper .image-wrapper {
     margin-bottom: 2rem;
   }
 }
 @media (max-width: 767px) {
-  .cid-sBb75zQkD0 .content-wrapper {
+  .cid-sBBXfUyw8t .content-wrapper {
     padding: 1rem;
   }
 }
 @media (min-width: 768px) and (max-width: 991px) {
-  .cid-sBb75zQkD0 .content-wrapper {
+  .cid-sBBXfUyw8t .content-wrapper {
     padding: 2rem;
   }
 }
 @media (min-width: 992px) {
-  .cid-sBb75zQkD0 .content-wrapper {
+  .cid-sBBXfUyw8t .content-wrapper {
     padding: 5rem 3rem;
   }
-  .cid-sBb75zQkD0 .content-wrapper .text-wrapper {
+  .cid-sBBXfUyw8t .content-wrapper .text-wrapper {
     padding-right: 2rem;
   }
 }
-.cid-sBb75zQkD0 .image-wrapper img {
+.cid-sBBXfUyw8t .image-wrapper img {
   width: 100%;
   object-fit: cover;
 }
-.cid-sBb769w40P {
+.cid-sBBXfUyw8t .card-title {
+  color: #d71414;
+}
+.cid-sBD4kIHwsZ {
   padding-top: 6rem;
   padding-bottom: 6rem;
-  background-color: #bed3f9;
+  background-color: #ffffff;
 }
-.cid-sBb769w40P .content-wrapper {
-  background: #fafafa;
+.cid-sBD4kIHwsZ .content-wrapper {
+  background: #cefffe;
 }
 @media (max-width: 991px) {
-  .cid-sBb769w40P .content-wrapper .image-wrapper {
+  .cid-sBD4kIHwsZ .content-wrapper .image-wrapper {
     margin-bottom: 2rem;
   }
 }
 @media (max-width: 767px) {
-  .cid-sBb769w40P .content-wrapper {
+  .cid-sBD4kIHwsZ .content-wrapper {
     padding: 1rem;
   }
 }
 @media (min-width: 768px) and (max-width: 991px) {
-  .cid-sBb769w40P .content-wrapper {
+  .cid-sBD4kIHwsZ .content-wrapper {
     padding: 2rem;
   }
 }
 @media (min-width: 992px) {
-  .cid-sBb769w40P .content-wrapper {
+  .cid-sBD4kIHwsZ .content-wrapper {
     padding: 5rem 3rem;
   }
-  .cid-sBb769w40P .content-wrapper .text-wrapper {
+  .cid-sBD4kIHwsZ .content-wrapper .text-wrapper {
     padding-left: 2rem;
   }
 }
-.cid-sBb769w40P .image-wrapper img {
+.cid-sBD4kIHwsZ .image-wrapper img {
   width: 100%;
   object-fit: cover;
+}
+.cid-sBD4kIHwsZ .card-title {
+  color: #ee1c1c;
+}
+.cid-sBD4mCuhTe {
+  padding-top: 6rem;
+  padding-bottom: 6rem;
+  background-color: #ffffff;
+}
+.cid-sBD4mCuhTe .content-wrapper {
+  background: #e3e0d2;
+}
+@media (max-width: 991px) {
+  .cid-sBD4mCuhTe .content-wrapper .row {
+    flex-direction: column-reverse;
+  }
+  .cid-sBD4mCuhTe .content-wrapper .image-wrapper {
+    margin-bottom: 2rem;
+  }
+}
+@media (max-width: 767px) {
+  .cid-sBD4mCuhTe .content-wrapper {
+    padding: 1rem;
+  }
+}
+@media (min-width: 768px) and (max-width: 991px) {
+  .cid-sBD4mCuhTe .content-wrapper {
+    padding: 2rem;
+  }
+}
+@media (min-width: 992px) {
+  .cid-sBD4mCuhTe .content-wrapper {
+    padding: 5rem 3rem;
+  }
+  .cid-sBD4mCuhTe .content-wrapper .text-wrapper {
+    padding-right: 2rem;
+  }
+}
+.cid-sBD4mCuhTe .image-wrapper img {
+  width: 100%;
+  object-fit: cover;
+}
+.cid-sBD4mCuhTe .card-title {
+  color: #13066f;
 }
 .cid-sBgyiRY74l {
   padding-top: 6rem;
@@ -2272,6 +2319,88 @@ a {
 .cid-sBgyiRY74l .image-wrapper img {
   width: 100%;
   object-fit: cover;
+}
+.cid-sBgyiRY74l .card-title {
+  color: #d71414;
+}
+.cid-sBb75zQkD0 {
+  padding-top: 6rem;
+  padding-bottom: 6rem;
+  background-color: #9fdbf8;
+}
+.cid-sBb75zQkD0 .content-wrapper {
+  background: #fde1e1;
+}
+@media (max-width: 991px) {
+  .cid-sBb75zQkD0 .content-wrapper .row {
+    flex-direction: column-reverse;
+  }
+  .cid-sBb75zQkD0 .content-wrapper .image-wrapper {
+    margin-bottom: 2rem;
+  }
+}
+@media (max-width: 767px) {
+  .cid-sBb75zQkD0 .content-wrapper {
+    padding: 1rem;
+  }
+}
+@media (min-width: 768px) and (max-width: 991px) {
+  .cid-sBb75zQkD0 .content-wrapper {
+    padding: 2rem;
+  }
+}
+@media (min-width: 992px) {
+  .cid-sBb75zQkD0 .content-wrapper {
+    padding: 5rem 3rem;
+  }
+  .cid-sBb75zQkD0 .content-wrapper .text-wrapper {
+    padding-right: 2rem;
+  }
+}
+.cid-sBb75zQkD0 .image-wrapper img {
+  width: 100%;
+  object-fit: cover;
+}
+.cid-sBb75zQkD0 .card-title {
+  color: #13066f;
+}
+.cid-sBb769w40P {
+  padding-top: 6rem;
+  padding-bottom: 6rem;
+  background-color: #bed3f9;
+}
+.cid-sBb769w40P .content-wrapper {
+  background: #e3e0d2;
+}
+@media (max-width: 991px) {
+  .cid-sBb769w40P .content-wrapper .image-wrapper {
+    margin-bottom: 2rem;
+  }
+}
+@media (max-width: 767px) {
+  .cid-sBb769w40P .content-wrapper {
+    padding: 1rem;
+  }
+}
+@media (min-width: 768px) and (max-width: 991px) {
+  .cid-sBb769w40P .content-wrapper {
+    padding: 2rem;
+  }
+}
+@media (min-width: 992px) {
+  .cid-sBb769w40P .content-wrapper {
+    padding: 5rem 3rem;
+  }
+  .cid-sBb769w40P .content-wrapper .text-wrapper {
+    padding-left: 2rem;
+  }
+}
+.cid-sBb769w40P .image-wrapper img {
+  width: 100%;
+  object-fit: cover;
+}
+.cid-sBb769w40P .card-title {
+  color: #22a5e5;
 }
 .cid-sBb0aGVJlS {
   padding-top: 2rem;
@@ -3388,5 +3517,436 @@ a {
   width: 100%;
 }
 .cid-sBb0aGVJlS .media-container-row .row-copirayt p {
+  width: 100%;
+}
+.cid-sBBZJLom9u {
+  z-index: 1000;
+  width: 100%;
+  position: relative;
+  min-height: 60px;
+}
+.cid-sBBZJLom9u nav.navbar {
+  position: fixed;
+}
+.cid-sBBZJLom9u .dropdown-item:before {
+  font-family: Moririse2 !important;
+  content: "\e966";
+  display: inline-block;
+  width: 0;
+  position: absolute;
+  left: 1rem;
+  top: 0.5rem;
+  margin-right: 0.5rem;
+  line-height: 1;
+  font-size: inherit;
+  vertical-align: middle;
+  text-align: center;
+  overflow: hidden;
+  transform: scale(0, 1);
+  transition: all 0.25s ease-in-out;
+}
+.cid-sBBZJLom9u .dropdown-menu {
+  padding: 0;
+  border-radius: 4px;
+  box-shadow: 0 1px 3px 0 rgba(0, 0, 0, 0.1);
+}
+.cid-sBBZJLom9u .dropdown-item {
+  border-bottom: 1px solid #e6e6e6;
+}
+.cid-sBBZJLom9u .dropdown-item:hover,
+.cid-sBBZJLom9u .dropdown-item:focus {
+  background: #6592e6 !important;
+  color: white !important;
+}
+.cid-sBBZJLom9u .dropdown-item:first-child {
+  border-top-left-radius: 4px;
+  border-top-right-radius: 4px;
+}
+.cid-sBBZJLom9u .dropdown-item:last-child {
+  border-bottom: none;
+  border-bottom-left-radius: 4px;
+  border-bottom-right-radius: 4px;
+}
+.cid-sBBZJLom9u .nav-dropdown .link {
+  padding: 0 0.3em !important;
+  margin: 0.667em 1em !important;
+}
+.cid-sBBZJLom9u .nav-dropdown .link.dropdown-toggle::after {
+  margin-left: 0.5rem;
+  margin-top: 0.2rem;
+}
+.cid-sBBZJLom9u .nav-link {
+  position: relative;
+}
+.cid-sBBZJLom9u .container {
+  display: flex;
+  margin: auto;
+}
+.cid-sBBZJLom9u .iconfont-wrapper {
+  color: #000000 !important;
+  font-size: 1.5rem;
+  padding-right: 0.5rem;
+}
+.cid-sBBZJLom9u .dropdown-menu,
+.cid-sBBZJLom9u .navbar.opened {
+  background: #ffffff !important;
+}
+.cid-sBBZJLom9u .nav-item:focus,
+.cid-sBBZJLom9u .nav-link:focus {
+  outline: none;
+}
+.cid-sBBZJLom9u .dropdown .dropdown-menu .dropdown-item {
+  width: auto;
+  transition: all 0.25s ease-in-out;
+}
+.cid-sBBZJLom9u .dropdown .dropdown-menu .dropdown-item::after {
+  right: 0.5rem;
+}
+.cid-sBBZJLom9u .dropdown .dropdown-menu .dropdown-item .mbr-iconfont {
+  margin-right: 0.5rem;
+  vertical-align: sub;
+}
+.cid-sBBZJLom9u .dropdown .dropdown-menu .dropdown-item .mbr-iconfont:before {
+  display: inline-block;
+  transform: scale(1, 1);
+  transition: all 0.25s ease-in-out;
+}
+.cid-sBBZJLom9u .collapsed .dropdown-menu .dropdown-item:before {
+  display: none;
+}
+.cid-sBBZJLom9u .collapsed .dropdown .dropdown-menu .dropdown-item {
+  padding: 0.235em 1.5em 0.235em 1.5em !important;
+  transition: none;
+  margin: 0 !important;
+}
+.cid-sBBZJLom9u .navbar {
+  min-height: 70px;
+  transition: all 0.3s;
+  border-bottom: 1px solid transparent;
+  box-shadow: 0 1px 3px 0 rgba(0, 0, 0, 0.1);
+  background: #ffffff;
+}
+.cid-sBBZJLom9u .navbar.opened {
+  transition: all 0.3s;
+}
+.cid-sBBZJLom9u .navbar .dropdown-item {
+  padding: 0.5rem 1.8rem;
+}
+.cid-sBBZJLom9u .navbar .navbar-logo img {
+  width: auto;
+}
+.cid-sBBZJLom9u .navbar .navbar-collapse {
+  justify-content: flex-end;
+  z-index: 1;
+}
+.cid-sBBZJLom9u .navbar.collapsed {
+  justify-content: center;
+}
+.cid-sBBZJLom9u .navbar.collapsed .nav-item .nav-link::before {
+  display: none;
+}
+.cid-sBBZJLom9u .navbar.collapsed.opened .dropdown-menu {
+  top: 0;
+}
+@media (min-width: 992px) {
+  .cid-sBBZJLom9u .navbar.collapsed.opened:not(.navbar-short) .navbar-collapse {
+    max-height: calc(98.5vh - 3rem);
+  }
+}
+.cid-sBBZJLom9u .navbar.collapsed .dropdown-menu .dropdown-submenu {
+  left: 0 !important;
+}
+.cid-sBBZJLom9u .navbar.collapsed .dropdown-menu .dropdown-item:after {
+  right: auto;
+}
+.cid-sBBZJLom9u .navbar.collapsed .dropdown-menu .dropdown-toggle[data-toggle="dropdown-submenu"]:after {
+  margin-left: 0.5rem;
+  margin-top: 0.2rem;
+  border-top: 0.35em solid;
+  border-right: 0.35em solid transparent;
+  border-left: 0.35em solid transparent;
+  border-bottom: 0;
+  top: 41%;
+}
+.cid-sBBZJLom9u .navbar.collapsed ul.navbar-nav li {
+  margin: auto;
+}
+.cid-sBBZJLom9u .navbar.collapsed .dropdown-menu .dropdown-item {
+  padding: 0.25rem 1.5rem;
+  text-align: center;
+}
+.cid-sBBZJLom9u .navbar.collapsed .icons-menu {
+  padding-left: 0;
+  padding-right: 0;
+  padding-top: 0.5rem;
+  padding-bottom: 0.5rem;
+}
+@media (max-width: 991px) {
+  .cid-sBBZJLom9u .navbar .nav-item .nav-link::before {
+    display: none;
+  }
+  .cid-sBBZJLom9u .navbar.opened .dropdown-menu {
+    top: 0;
+  }
+  .cid-sBBZJLom9u .navbar .dropdown-menu .dropdown-submenu {
+    left: 0 !important;
+  }
+  .cid-sBBZJLom9u .navbar .dropdown-menu .dropdown-item:after {
+    right: auto;
+  }
+  .cid-sBBZJLom9u .navbar .dropdown-menu .dropdown-toggle[data-toggle="dropdown-submenu"]:after {
+    margin-left: 0.5rem;
+    margin-top: 0.2rem;
+    border-top: 0.35em solid;
+    border-right: 0.35em solid transparent;
+    border-left: 0.35em solid transparent;
+    border-bottom: 0;
+    top: 40%;
+  }
+  .cid-sBBZJLom9u .navbar .navbar-logo img {
+    height: 3rem !important;
+  }
+  .cid-sBBZJLom9u .navbar ul.navbar-nav li {
+    margin: auto;
+  }
+  .cid-sBBZJLom9u .navbar .dropdown-menu .dropdown-item {
+    padding: 0.25rem 1.5rem !important;
+    text-align: center;
+  }
+  .cid-sBBZJLom9u .navbar .navbar-brand {
+    flex-shrink: initial;
+    flex-basis: auto;
+    word-break: break-word;
+    padding-right: 2rem;
+  }
+  .cid-sBBZJLom9u .navbar .navbar-toggler {
+    flex-basis: auto;
+  }
+  .cid-sBBZJLom9u .navbar .icons-menu {
+    padding-left: 0;
+    padding-top: 0.5rem;
+    padding-bottom: 0.5rem;
+  }
+}
+.cid-sBBZJLom9u .navbar.navbar-short {
+  min-height: 60px;
+}
+.cid-sBBZJLom9u .navbar.navbar-short .navbar-logo img {
+  height: 2.5rem !important;
+}
+.cid-sBBZJLom9u .navbar.navbar-short .navbar-brand {
+  min-height: 60px;
+  padding: 0;
+}
+.cid-sBBZJLom9u .navbar-brand {
+  min-height: 70px;
+  flex-shrink: 0;
+  align-items: center;
+  margin-right: 0;
+  padding: 10px 0;
+  transition: all 0.3s;
+  word-break: break-word;
+  z-index: 1;
+}
+.cid-sBBZJLom9u .navbar-brand .navbar-caption {
+  line-height: inherit !important;
+}
+.cid-sBBZJLom9u .navbar-brand .navbar-logo a {
+  outline: none;
+}
+.cid-sBBZJLom9u .dropdown-item.active,
+.cid-sBBZJLom9u .dropdown-item:active {
+  background-color: transparent;
+}
+.cid-sBBZJLom9u .navbar-expand-lg .navbar-nav .nav-link {
+  padding: 0;
+}
+.cid-sBBZJLom9u .nav-dropdown .link.dropdown-toggle {
+  margin-right: 1.667em;
+}
+.cid-sBBZJLom9u .nav-dropdown .link.dropdown-toggle[aria-expanded="true"] {
+  margin-right: 0;
+  padding: 0.667em 1.667em;
+}
+.cid-sBBZJLom9u .navbar.navbar-expand-lg .dropdown .dropdown-menu {
+  background: #ffffff;
+}
+.cid-sBBZJLom9u .navbar.navbar-expand-lg .dropdown .dropdown-menu .dropdown-submenu {
+  margin: 0;
+  left: 100%;
+}
+.cid-sBBZJLom9u .navbar .dropdown.open > .dropdown-menu {
+  display: block;
+}
+.cid-sBBZJLom9u ul.navbar-nav {
+  flex-wrap: wrap;
+}
+.cid-sBBZJLom9u .navbar-buttons {
+  text-align: center;
+  min-width: 170px;
+}
+.cid-sBBZJLom9u button.navbar-toggler {
+  outline: none;
+  width: 31px;
+  height: 20px;
+  cursor: pointer;
+  transition: all 0.2s;
+  position: relative;
+  align-self: center;
+}
+.cid-sBBZJLom9u button.navbar-toggler .hamburger span {
+  position: absolute;
+  right: 0;
+  width: 30px;
+  height: 2px;
+  border-right: 5px;
+  background-color: #000000;
+}
+.cid-sBBZJLom9u button.navbar-toggler .hamburger span:nth-child(1) {
+  top: 0;
+  transition: all 0.2s;
+}
+.cid-sBBZJLom9u button.navbar-toggler .hamburger span:nth-child(2) {
+  top: 8px;
+  transition: all 0.15s;
+}
+.cid-sBBZJLom9u button.navbar-toggler .hamburger span:nth-child(3) {
+  top: 8px;
+  transition: all 0.15s;
+}
+.cid-sBBZJLom9u button.navbar-toggler .hamburger span:nth-child(4) {
+  top: 16px;
+  transition: all 0.2s;
+}
+.cid-sBBZJLom9u nav.opened .hamburger span:nth-child(1) {
+  top: 8px;
+  width: 0;
+  opacity: 0;
+  right: 50%;
+  transition: all 0.2s;
+}
+.cid-sBBZJLom9u nav.opened .hamburger span:nth-child(2) {
+  transform: rotate(45deg);
+  transition: all 0.25s;
+}
+.cid-sBBZJLom9u nav.opened .hamburger span:nth-child(3) {
+  transform: rotate(-45deg);
+  transition: all 0.25s;
+}
+.cid-sBBZJLom9u nav.opened .hamburger span:nth-child(4) {
+  top: 8px;
+  width: 0;
+  opacity: 0;
+  right: 50%;
+  transition: all 0.2s;
+}
+.cid-sBBZJLom9u .navbar-dropdown {
+  padding: 0 1rem;
+  position: fixed;
+}
+.cid-sBBZJLom9u a.nav-link {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.cid-sBBZJLom9u .icons-menu {
+  flex-wrap: nowrap;
+  display: flex;
+  justify-content: center;
+  padding-left: 1rem;
+  padding-right: 1rem;
+  padding-top: 0.3rem;
+  text-align: center;
+}
+@media screen and (-ms-high-contrast: active), (-ms-high-contrast: none) {
+  .cid-sBBZJLom9u .navbar {
+    height: 70px;
+  }
+  .cid-sBBZJLom9u .navbar.opened {
+    height: auto;
+  }
+  .cid-sBBZJLom9u .nav-item .nav-link:hover::before {
+    width: 175%;
+    max-width: calc(100% + 2rem);
+    left: -1rem;
+  }
+}
+.cid-sBC14oXp1E {
+  padding-top: 5rem;
+  padding-bottom: 5rem;
+  background-color: #ddfafe;
+}
+.cid-sBC14oXp1E .mbr-section-title {
+  color: #2299aa;
+}
+.cid-sBC14oXp1E .mbr-section-subtitle {
+  color: #232323;
+}
+.cid-sBBZJNckDr {
+  padding-top: 2rem;
+  padding-bottom: 2rem;
+  background-color: #232323;
+}
+.cid-sBBZJNckDr .row-links {
+  width: 100%;
+  justify-content: center;
+}
+.cid-sBBZJNckDr .social-row {
+  width: 100%;
+  justify-content: center;
+}
+.cid-sBBZJNckDr .media-container-row {
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+.cid-sBBZJNckDr .media-container-row .foot-menu {
+  list-style: none;
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
+  padding: 0;
+  margin-bottom: 0;
+}
+.cid-sBBZJNckDr .media-container-row .foot-menu li {
+  padding: 0 1rem 1rem 1rem;
+}
+.cid-sBBZJNckDr .media-container-row .foot-menu li p {
+  margin: 0;
+}
+.cid-sBBZJNckDr .media-container-row .social-list {
+  padding-left: 0;
+  margin-bottom: 0;
+  list-style: none;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: flex-end;
+}
+.cid-sBBZJNckDr .media-container-row .social-list .mbr-iconfont-social {
+  font-size: 1.5rem;
+  color: #ffffff;
+}
+.cid-sBBZJNckDr .media-container-row .social-list .soc-item {
+  margin: 0 .5rem;
+}
+.cid-sBBZJNckDr .media-container-row .social-list a {
+  margin: 0;
+  opacity: .5;
+  transition: .2s linear;
+}
+.cid-sBBZJNckDr .media-container-row .social-list a:hover {
+  opacity: 1;
+}
+@media (max-width: 767px) {
+  .cid-sBBZJNckDr .media-container-row .social-list {
+    -webkit-justify-content: center;
+    justify-content: center;
+  }
+}
+.cid-sBBZJNckDr .media-container-row .row-copirayt {
+  word-break: break-word;
+  width: 100%;
+}
+.cid-sBBZJNckDr .media-container-row .row-copirayt p {
   width: 100%;
 }
